--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     </head>
     <body>
         <nav id="header">
-            <a href="/GitHub">GitHub</a>
-            <a href="/Portfolio">Portfolio</a>
-            <a href="/Contact">Contact</a>
+            <a href="#GitHub">GitHub</a>
+            <a href="#Portfolio">Portfolio</a>
+            <a href="#Contact">Contact</a>
         </nav>
-
-        <h1>Your Contact</h1>
 
         <img id="img" src="C:\Users\snyh2\Downloads\contact.jpg" alt="contact picture">
 
+        <h4 id="Contact">Your Contact</h4>
 
         <ul>
             <li><label for="name">Name</label>
