--- a/index.html
+++ b/index.html
@@ -17,16 +17,23 @@
 
         <h4 id="Contact">Your Contact</h4>
 
+        <br>
+
         <ul>
             <li><label for="name">Name</label>
-            <input type="text" id="name=" name="User_name"></li>
+            <input type="text" id="name="></li>
             <li><label for="email">Email</label>
-        <input type="text" id="e-mail" name="E-mail"></li>
-    </ul>
+            <input type="text" id="e-mail"></li>
+        </ul>
+    
+        <br>
 
         <button class="styled" type="button">
             Send
         </button>
+
+        <br>
+        <br>
 
         <footer id="footer">
             <h5>Hope You Enjoyed</h5>
